# server/internal/docs/swagger.json
@@ -333,6 +333,56 @@
                 }
             }
         },
+        "/info": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "settings"
+                ],
+                "summary": "Get the info page",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/setting.InfoContent"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "settings"
+                ],
+                "summary": "Update the info page",
+                "parameters": [
+                    {
+                        "description": "HTML content",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/setting.InfoContent"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/setting.InfoContent"
+                        }
+                    }
+                }
+            }
+        },
         "/news": {
             "get": {
                 "produces": [
@@ -978,6 +1028,45 @@
                         "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/web.ErrorResponse"
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "schema": {
+                            "$ref": "#/definitions/web.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/settings/display-email": {
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "settings"
+                ],
+                "summary": "Set the public contact email",
+                "parameters": [
+                    {
+                        "description": "Email; empty removes it",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/setting.DisplayEmail"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/setting.DisplayEmail"
                         }
                     },
                     "422": {
@@ -1779,6 +1868,22 @@
             "type": "object",
             "properties": {
                 "season": {
+                    "type": "string"
+                }
+            }
+        },
+        "setting.DisplayEmail": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                }
+            }
+        },
+        "setting.InfoContent": {
+            "type": "object",
+            "properties": {
+                "content": {
                     "type": "string"
                 }
             }
